Fix Teltow line wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -201,7 +201,7 @@ table td {
 }
 .me-contact-width {
     margin: 0 auto;
-    width:180px;
+    width:230px;
     overflow:hidden;
     text-align: center;
 }
