--- a/css/style_print.css
+++ b/css/style_print.css
@@ -196,7 +196,7 @@ table td {
 }
 .me-contact-width {
     margin: 0 auto;
-    width:180px;
+    width:200px;
     overflow:hidden;
     text-align: center;
 }
